logo and mailer

--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,1 +1,9 @@
 contact us
+
+<form method="POST" action="/mailer">
+		your email 
+        <input type="text" name="email">
+        your message
+        <textarea name="text"></textarea>
+        <input type="submit" name="submit" value="submit">
+</form>
