first changes to the home.erb file

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,1 +1,31 @@
-home
+<html>
+<head>
+    <link href="home.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+</head>
+
+<body>
+
+<video width="100%" autoplay="autoplay" loop>
+    <source src="rp03.mp4" type="video/mp4">
+</video>
+
+<nav class="circular-menu">
+
+  <div class="circle">
+    <a href="">Home</a>
+    <a href="">About</a>
+    <a href="">Preorder</a>
+    <a href="">Contact</a>
+
+  </div>
+  
+  <a href="" class="menu-button"></a>
+
+</nav>
+
+<script src="radial.js"></script>
+
+</body>
+
+</html>
