--- a/views/home.erb
+++ b/views/home.erb
@@ -10,13 +10,17 @@
     <source src="rp03.mp4" type="video/mp4">
 </video>
 
+<div id="title">
+  <h1>TinCan Consulting</h1>
+</div>
+
 <nav class="circular-menu">
 
   <div class="circle">
-    <a href="">Home</a>
-    <a href="">About</a>
-    <a href="">Preorder</a>
-    <a href="">Contact</a>
+    <a href="#">Home</a>
+    <a href="info">Info</a>
+    <a href="preorder">Preorder</a>
+    <a href="contact">Contact</a>
 
   </div>
   
