--- a/views/info.erb
+++ b/views/info.erb
@@ -1,1 +1,29 @@
-info
+<html>
+<head>
+    <link href="home.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+</head>
+
+<body>
+
+<img src="rp_01.jpg">
+
+<nav class="circular-menu">
+
+  <div class="circle">
+    <a href="#">Home</a>
+    <a href="info.erb">Info</a>
+    <a href="preorder.erb">Preorder</a>
+    <a href="contact.erb">Contact</a>
+
+  </div>
+  
+  <a href="" class="menu-button"></a>
+
+</nav>
+
+<script src="radial.js"></script>
+
+</body>
+
+</html>
