--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,4 +1,22 @@
-contact us
+<div id="wrapper">
+	<div id="nav">
+	</div>
+
+	<div id="body">
+		<div id="heading">
+			<h1>Heading</h1>
+		</div>
+		<div id="content">
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</div>
+
 
 <form method="POST" action="/mailer">
 		your email 
