Added image to the contact page and add two new css pages

--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,5 +1,27 @@
 contact us
 
+<head>
+    <link href="contact.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+    <script src="radial.js"></script>
+</head>
+
+<img src="contact.jpg">
+
+<nav class="circular-menu">
+
+  <div class="circle">
+    <a href="/">Home</a>
+    <a href="info">Info</a>
+    <a href="preorder">Preorder</a>
+    <a href="#">Contact</a>
+
+  </div>
+  
+  <a href="" class="menu-button"></a>
+
+</nav>
+
 <form method="POST" action="/mailer">
 		your email 
         <input type="text" name="email">
@@ -7,3 +29,5 @@ contact us
         <textarea name="text"></textarea>
         <input type="submit" name="submit" value="submit">
 </form>
+
+<script src="radial.js"></script>
