--- a/views/info.erb
+++ b/views/info.erb
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link href="home.css" rel="stylesheet">
+    <link href="info.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 </head>
 
@@ -11,10 +11,10 @@
 <nav class="circular-menu">
 
   <div class="circle">
-    <a href="#">Home</a>
-    <a href="info.erb">Info</a>
-    <a href="preorder.erb">Preorder</a>
-    <a href="contact.erb">Contact</a>
+    <a href="/">Home</a>
+    <a href="#">Info</a>
+    <a href="preorder">Preorder</a>
+    <a href="contact">Contact</a>
 
   </div>
   
