--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,1 +1,25 @@
+<html>
+<head>
+    <link href="info.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+</head>
+
+<body>
+
+<nav class="circular-menu">
+  <div class="circle">
+    <a href="/">Home</a>
+    <a href="info">Info</a>
+    <a href="preorder">Preorder</a>
+    <a href="contact">Contact</a>
+  </div> 
+  <a href="" class="menu-button"></a>
+</nav>
+<script src="radial.js"></script>
+
 <%= yield %>
+
+</body>
+
+</html>
+
