--- a/public/info.css
+++ b/public/info.css
@@ -8,7 +8,7 @@ body {
   width: 250px;
   height: 250px;
   margin-left: 75%;
-  margin-top: 0%;
+  margin-top: -1%;
   position: absolute;
 }
 
@@ -94,12 +94,21 @@ img {
   z-index: -1;
 }
 
+video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -100;
+}
+
 #content{
   display: block;
-  background-color: rgba(200,200,200,0.4);
+  background-color: rgba(200,200,200,0.6);
   width: 496px;
   height: 100%;
+  max-height: 810px;
   margin:0px 60px;
+  margin-top: -16px;
   padding: 240px 24px 12px 24px;
   float: right;
   font-size: 24px;
