--- a/views/home.erb
+++ b/views/home.erb
@@ -12,6 +12,7 @@
 
 <div id="title">
   <h1>TinCan Consulting</h1>
+  <h2>a compact solution to all your communication needs</h2>
 </div>
 
 <nav class="circular-menu">
