--- a/views/info.erb
+++ b/views/info.erb
@@ -1,6 +1,8 @@
 
 
-<img src="rp_01.jpg">
+<video width="100%" autoplay="autoplay" loop>
+    <source src="info03.mp4" type="video/mp4">
+</video>
 
 <div id="content">
 	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
