--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,19 +1,11 @@
 <img src="contact.jpg">
 
 		<div id="content">
-			
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			Have more questions? Let us know! We'll be in touch right away.
 		<form method="POST" action="/mailer">
-		your email 
-        <input type="text" name="email">
-        your message
-        <textarea name="text"></textarea>
-        <input type="submit" name="submit" value="submit">
+        <input type="text" placeholder = "your email" name="email">
+        <textarea name="text" placeholder = "your message"></textarea>
+        <input type="submit" name="submit" class = "subm" value="tell us">
 		</form>
 			
 		</div>
