added text for pages. added preorder form

--- a/views/info.erb
+++ b/views/info.erb
@@ -5,10 +5,5 @@
 </video>
 
 <div id="content">
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	Solid voice communications are crucial to the succes of your small business. But traditional PBX systems can be difficult to administer, and systems hosted off-site can be a lot more expensive than you might like. Our system is a little different. We offer voicemail, speech-to-text and text-to-speech, and fully customizable IVRs and call queues. Set up robocalls or automate SMS interactions. Connect to remote workers' cellphones as though they're office extensions. Or do anything else you can conceive of. It all runs on a box that fits in the palm of your hand. Control it yourself using a simple web interface, or have us manage it. Experience telephony bliss for about two dollars a month. 
 </div>
