--- a/views/preorder.erb
+++ b/views/preorder.erb
@@ -2,10 +2,10 @@
 <img src="rp_01.jpg">
 
 <div id="content">
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	Experience telephony bliss for about two dollars a month. If you're ready to try our new unit as soon as we're ready to ship, you can save a spot at the front of the line.
+
+	<form method="POST" action="/mailer">
+        <input type="text" placeholder = "your email" name="email">
+        <input type="submit" name="submit" class = "subm" value="save my spot!">
+	</form>
 </div>
